--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -47,8 +47,14 @@ body {
   width: 85%;
 }
 
+button {
+  background-color: transparent;
+  border: $color-1 solid 1px;
+  border-radius: 6px;
+  color: $color-1;
+}
+
 li {
-  border-bottom: $color-3 solid 1px;
   box-sizing: border-box;
   float: left;
   font-size: 13px;
@@ -61,6 +67,20 @@ li {
   text-align: center;
   text-transform: uppercase;
   width: 50%;
+
+  &::after {
+    border-bottom: $color-3 solid 1px;
+    bottom: 0;
+    content: '';
+    left: 50%;
+    position: absolute;
+    transition: .2s;
+    width: 10px;
+
+    &:hover::after {
+      width: 100%;
+    }
+  }
 }
 
 a {
@@ -125,8 +145,12 @@ a {
 .navbar-toggle {
   background-color: transparent;
   border: 0;
+  cursor: pointer;
   float: right;
-  margin: 10px;
+  margin-right: 0;
+  position: absolute;
+  right: 20px;
+  top: 20px;
 
   &:hover {
     .icon-bar {
@@ -145,11 +169,23 @@ a {
 }
 
 .navbar-right {
-  height: 30px;
-  margin-bottom: 0;
-  margin-right: 70px;
-  margin-top: 0;
+  margin-right: 30px;
+  position: relative;
+  top: 15px;
   width: 150px;
+
+  li {
+    border: $color-1 solid 1px;
+    border-radius: 6px;
+    font-weight: bold;
+    height: 30px;
+    line-height: 2.2;
+    text-align: center;
+  }
+}
+
+.usernav-collapse {
+  border-radius: 6px;
 }
 
 .center-text {
@@ -157,11 +193,6 @@ a {
   margin-right: auto;
   text-align: center;
   width: 50%;
-}
-
-.logged-in-user {
-  float: right;
-  margin: 10px;
 }
 
 .spacer-1 {
@@ -175,6 +206,7 @@ a {
 
 ul {
   display: block;
+  margin-block-end: 10px;
 
   &::after {
     clear: both;
@@ -228,6 +260,7 @@ ul {
 }
 
 .signin-btn {
+  border: $color-1 solid 1px;
   width: 150px;
 }
 
