--- a/templates/header.html
+++ b/templates/header.html
@@ -1,33 +1,39 @@
 {% extends 'base.html' %}
+
 {% block header %}
-<header class="header">
-    <nav>
-        <div class="flex-container">
-            <a class="hd-brand fl" href="#">山形Hotels</a>
-            <div class="hd-navbar">
-                <ul class="nav fr" role="navigation">
-                    {%if 'username' not in session %}
-                    <li><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a></li>
-                    {% else %}
-                    <button type="button" class="dropdown logged-in-user-toggle" title="User-links dropdown menu" data-toggle="collapse" data-targt="#userNav">{{ session.username }}</button>
-                    <li><a href="{{ url_for('gdisconnect') }}"><span class="btn glyphicon glyphicon-user"></span>Log Out</a></li>
-                    {% endif %}
-                </ul>
-                <button type="button" class="navbar-toggle" title="Toggle navigation menu." data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Page 1</a></li>
-                        <li><a href="#">Page 2</a></li>
-                        <li><a href="#">Page 3</a></li>
-                    </ul>
-                </div>
-            </div>
+<header class="hdr">
+    <div class="lay-flex-container">
+        <a class="hdr-brand fl" href="#">山形Hotels</a>
+        <div class="hdr-nav">
+            <nav class="hdr-navbar" id="hdrNavbar">
+                <a class="is-active" href="#">Home</a>
+                <a href="#">Page 1</a>
+                <a href="#">Page 2</a>
+                <a href="#">Page 3</a>
+                {% if 'username' not in session %}
+                <a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a>
+                {% else %}
+                <a href="#"><span class="btn glyphicon glyphicon-user">{{ session.username }}</span></a>
+                <a href="{{ url_for('gdisconnect') }}"><span class="btn glyphicon glyphicon-user">Log Out</span></a>
+                {% endif %}
+                <a href="javascript:void(0);" class="hdr-icon" onclick="hdrFunction()">
+                    <i class="fa fa-bars fa-2x"></i>
+                </a>
+            </nav>
         </div>
-    </nav>
+    </div>
 </header>
+{% endblock %}
+
+{% block scripts %}
+<script>
+function hdrFunction() {
+    var x = document.getElementById("hdrNavbar");
+    if (x.className === "hdr-navbar") {
+        x.className += " responsive";
+    } else {
+        x.className = "hdr-navbar";
+    }
+}
+</script>
 {% endblock %}
