--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,6 +86,19 @@ input {
     .hdr-navbar a:last-child {
       display: block; }
 
+.hdr-user-link .far {
+  color: #fff; }
+
+.hdr-user-link .fas {
+  color: #092bea; }
+
+.hdr-user-link .fa-user {
+  float: right;
+  font-size: 50px;
+  position: absolute;
+  right: 80px;
+  top: 10px; }
+
 .hdr-navbar.responsive {
   position: relative;
   width: 300px; }
