--- a/templates/public_list_hotels.html
+++ b/templates/public_list_hotels.html
@@ -26,6 +26,8 @@
     </ul>
 </div>
 
+<p><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a> to edit.</p>
+
 <div class="sidebar">
     <ul>
     {% for hotel in hotels %}
