--- a/templates/public_list_hotels_by_category.html
+++ b/templates/public_list_hotels_by_category.html
@@ -9,6 +9,9 @@
 {% for hotel in hotels %}
     <h2><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h2>
 {% endfor %}
+
+<p><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a> to edit.</p>
+
 <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Back to Hotels</a>
 
 {% endblock %}
