--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -96,11 +96,13 @@ input {
 
 // hdr = header
 .hdr {
-  background-color: $color-2;
+  background-color: rgba($color-2, .7);
+  box-shadow: 3px 3px 3px $color-4;
   height: 80px;
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 11;
 }
 
 .hdr-brand {
@@ -111,9 +113,18 @@ input {
 }
 
 .hdr-navbar {
+  background-color: rgba($color-4, .9);
   height: 100%;
+
+  .hdr-icon {
+    border: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
   // Style the links inside the navigation bar
   a {
+    border-bottom: 1px solid $color-6;
     color: $color-1;
     display: none;
     float: left;
@@ -141,6 +152,11 @@ input {
 }
 
 .hdr-user-link {
+  .hdr-text {
+    color: $color-1;
+    font-size: $font-size-two;
+  }
+
   .far {
     color: $color-1;
   }
@@ -169,8 +185,6 @@ input {
   }
 
   &:hover {
-    background-color: $color-4;
-    color: $color-1;
     text-decoration: none;
   }
 
@@ -186,8 +200,9 @@ input {
   }
 }
 
+// ftr = footer
 .ftr {
-  background-color: $color-6;
+  background-color: rgba($color-4, .9);
   bottom: 0;
   position: fixed;
   width: 100%;
@@ -200,16 +215,45 @@ input {
   }
 }
 
+.signin-btn {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 150px;
+}
 // ************************************
 // State Rules ************************
 // ************************************
-.hdr-navbar {
-  // Style the links inside the navigation bar
-  a.is-active {
-    background-color: $color-4;
-    color: $color-1;
+
+@media screen and (min-width: 600px) {
+  .hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("/static/img/ginzan.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    position: relative;
+    width: 100%;
+
+    .hero-text {
+      color: $color-1;
+      position: relative;
+      text-align: center;
+      top: 300px;
+
+      a {
+        color: $color-1;
+      }
+    }
+  }
+
+  .hdr {
+    right: 0;
+    top: 60px;
+    width: 90%;
   }
 }
+
 // ************************************
 // Theme Rules ************************
 // ************************************
