--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,13 @@
     </head>
 
     <body>
+        <div class="hero-image">
+          <div class="hero-text">
+            <h1>Lodgings</h1>
+            <p>Categories</p>
+            <a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a>
+          </div>
+        </div>
         {% block header %}
         {% endblock %}
 
