--- a/templates/header.html
+++ b/templates/header.html
@@ -5,9 +5,9 @@
     <div class="lay-flex-container">
         <a class="hdr-brand fl" href="#">山形Hotels</a>
         {% if 'username' not in session %}
-        <a class="hdr-user-link" href="{{ url_for('showLogin') }}"><i class="far fa-user"></i></a>
+        <a class="hdr-user-link" href="{{ url_for('showLogin') }}"><i class="far fa-user"><span class="hdr-text"> Log In</span></i></a>
         {% else %}
-        <a class="hdr-user-link" href="#"><i class="fas fa-user"></i></a>
+        <a class="hdr-user-link" href="#"><i class="fas fa-user"><span class="hdr-text"> Welcome, {{ session.username }}!</span></i></a>
         {% endif %}
         <div class="hdr-nav">
             <nav class="hdr-navbar" id="hdrNavbar">
