--- a/templates/new_hotel.html
+++ b/templates/new_hotel.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
     <h1 class="page-title heading">Add New Hotel</h1>
-    <form action="{{ url_for('newHotel') }}" method="POST">
+    <form class="form" action="{{ url_for('newHotel') }}" method="POST">
         <div class="form-group">
             <label class=".sr-only" for="nameOfHotel">Name of hotel</label>
             <input class="form-control" type="text" id="nameOfHotel" name="name" placeholder="Name of hotel">
