Add docstrings to all functions in HotelsProject.py

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
 {% block header %}
+<div class="hero-image">
+  <div class="hero-text">
+  </div>
+</div>
 <header class="hdr">
     <div class="lay-flex-container">
         <a class="hdr-brand fl" href="#">山形Hotels</a>
