--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -36,6 +36,7 @@ body {
   color: $color-4;
   font-family: $font-two;
   font-size: $font-size-base;
+  position: relative;
   width: 100%;
 }
 
@@ -215,12 +216,34 @@ input {
   }
 }
 
-.signin-btn {
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  width: 150px;
+.box {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
 }
+
+.login-box {
+  align-items: center;
+  background-color: $color-3;
+  box-shadow: 3px 3px 3px $color-6;
+  color: $color-6;
+  display: flex;
+  height: 400px;
+  justify-content: center;
+  width: 300px;
+}
+
+.login-title {
+  position: absolute;
+  top: 80px;
+}
+
+.signin-btn {
+  position: absolute;
+  top: 300px;
+}
+
 // ************************************
 // State Rules ************************
 // ************************************
